--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "mongodb.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^4.10.0",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
