--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.31.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
