--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,12 +5,14 @@
   "main": "mongodb.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "env-cmd": "^8.0.2",
     "express": "^4.18.2",
@@ -22,6 +24,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "jest": "^29.2.2",
     "nodemon": "^2.0.20"
   }
 }
